# SurvLIMEpy

./: CITATION.cff  MANIFEST.in  README.md  lime_tabular.py  multiple_models.ipynb  pyproject.toml  setup.py
survLime/: lime_base.py  survlime_explainer.py  survlime_tabular.py
survLime/computed_weights_csv/: exp_lung_surv_weights.csv  exp_lung_surv_weights_na.csv  exp_pbc_surv_weights.csv  exp_pbc_surv_weights_na.csv  exp_udca_surv_weights.csv  exp_udca_surv_weights_na.csv  exp_veterans_surv_weights.csv  exp_veterans_surv_weights_na.csv  pbc_surv_weights.csv  udca_2_surv_weights.csv  udca_surv_weights.csv  vetarans_2_surv_weights.csv  veteran_surv_weights.csv  veterans_surv_weights.csv  veterans_surv_weights_rs_42.csv  veterans_surv_weights_rs_50.csv
survLime/datasets/: heart_dataset.csv  load_datasets.py  loading_utils.py  pbc_dataset.csv
survLime/notebooks/: Untitled.ipynb  config_os.py  lab_names.py  primera_prueba.ipynb  random_survival_times.ipynb  simulated_data_example.ipynb  vetaran_notebook.ipynb
survLime/scripts/: compute_dataset_weights.py  experiment_1.py  experiment_2.py
survLime/utils/: generic_utils.py  neighbours_generator.py  optimization.py
survlime/: load_datasets.py  survlime_explainer.py
survlime/datasets/: udca_dataset.csv
survlime/utils/: neighbours_generator.py  predict.py
survlimepy/: __init__.py  load_datasets.py  survlime_explainer.py
survlimepy/datasets/: loading_utils.py  veteran.csv
survlimepy/utils/: neighbours_generator.py  optimisation.py  predict.py  step_function.py
tests/: test_datasets.py  test_random_survival_data.py  tests.py
